Rename var 'isOnStopsSearchPage' by 'isOnStopDetailPage'

--- a/src/web-app/app/shared/components/navbar/navbar.component.html
+++ b/src/web-app/app/shared/components/navbar/navbar.component.html
@@ -16,7 +16,7 @@
     Back
   </a>
 
-  <ng-container *ngIf="isOnStopsSearchPage">
+  <ng-container *ngIf="isOnStopDetailPage">
     <div class="header-title">
       <h2 class="stop-title">{{stopName}}</h2>
       <h3 class="stop-id">ID : {{stopId}}</h3>
