--- a/src/web-app/app/histories/list/history-list.component.html
+++ b/src/web-app/app/histories/list/history-list.component.html
@@ -1,14 +1,14 @@
 <div *ngIf="histories">
-  {{histories|json}}
   <app-navbar [stopName]="stopName" [stopId]="stopId"> </app-navbar>
+
+  <!-- {{histories|json}} -->
 
   <section class="histories">
     <!-- <a class="history" *ngFor="let history of histories" [routerLink]="['./', history.id]"></a>> -->
     <mat-list *ngFor="let history of histories">
       <mat-list-item>
         <a class="history" [routerLink]="['./', history.id]">
-          <!-- <img [ngStyle="{'vertical-align: 'middle'}" src="/assets/icons/update.svg" width="30" height="30" alt="" />  -->
-          Update of {{history.created_at | date }}
+          <img [ngStyle]="{'vertical-align': 'middle'}" src="/assets/icons/history.svg" width="30" height="30" alt="" /> Update of {{history.created_at | date }}
         </a>
       </mat-list-item>
       <mat-divider></mat-divider>
