--- a/src/web-app/app/categories/overview/categories-overview.component.html
+++ b/src/web-app/app/categories/overview/categories-overview.component.html
@@ -1,4 +1,21 @@
-<mat-list *ngFor="let category of categories">
-  <mat-list-item>{{ category.name }}</mat-list-item>
-  <mat-divider></mat-divider>
-</mat-list>
+<mat-accordion>
+  <mat-expansion-panel *ngFor="let category of categories">
+    <mat-expansion-panel-header *ngIf="categories_group[category.num]">
+      <mat-panel-title>
+        {{ category.name }}
+      </mat-panel-title>
+    </mat-expansion-panel-header>
+
+    <mat-list>
+      <ng-container *ngFor="let child of categories_group[category.num]">
+        <mat-list-item (click)="goToQuestion(child)">{{ findSubCategory(child).name }}</mat-list-item>
+        <mat-divider></mat-divider>
+      </ng-container>
+    </mat-list>
+  </mat-expansion-panel>
+</mat-accordion>
+
+
+
+
+<!--  -->
