--- a/src/web-app/app/questions/overview/overview.component.css
+++ b/src/web-app/app/questions/overview/overview.component.css
@@ -1,4 +1,11 @@
 .heading {
+    width: 100%;
+    position: fixed;
+    background-color: white;
+    z-index: 100;
+}
+
+.heading-content {
     width: 90%;
     margin-left: auto;
     margin-right: auto;
@@ -25,10 +32,7 @@
 }
 
 .progress-tag, .progress-bar {
-    width: 90%;
     display: flex;
-    margin-left: auto;
-    margin-right: auto;
     justify-content: center;
 }
 
@@ -48,32 +52,53 @@
 
 .end-buttons {
     display: flex;
-    flex-direction: column;
-    width: 90%;
-    margin-left: auto;
-    margin-right: auto;
+    justify-content: space-between;
+    width: 100%;
+    position: fixed;
+    bottom: 0;
+    background-color: white;
+    box-shadow: 0 -3px 15px -4px rgba(165,195,253,0.40);
+}
+
+.cancel, .done-button {
+    width: 47%;
+    padding: 0.5rem 1rem;
+    height: 5rem;
+    margin: 0 1rem 0.5rem 0;
+    font-size: 16px;
+    color: #1B1B1B;
+    text-align: center;
+    text-decoration: none;
+    line-height: 5rem;
 }
 
 .done-button {
-    height: 4rem;
-    color: #ffffff;
-    background-image: linear-gradient(-270deg, #0072ff 0%, #00c6ff 99%);
-    color: white;
-    box-shadow: 0 9px 22px -6px rgba(153, 208, 253, 0.5);
-    border: 2px hidden;
-    border-radius: 5px;
-    font-size: 1.6rem;
+    color: #039be5;
 }
 
-.cancel {
-    text-align: center;
-    height: 4rem;
-    font-size: 1.4rem;
-    text-decoration: none;
-    padding-top: 1rem;
-    color: #323232;
+.stripe {
+    height: 3.5rem;
+    align-self: center;
+    width: .1rem;
+    background-color: darkgray;
 }
+
 
 .backbutton {
     margin-top: 1rem;
+}
+
+.questionDiv {
+    margin-bottom: 3rem;
+}
+
+.empty-div {
+    height: 5rem;
+}
+.empty-first-div {
+    height: 18rem;
+}
+
+.myStyle question {
+    color: #ff00FF;
 }
