--- a/src/web-app/app/questions/question-types/boolean/boolean.component.html
+++ b/src/web-app/app/questions/question-types/boolean/boolean.component.html
@@ -1,8 +1,8 @@
-<div class="boolean-component">
+<div class="boolean-component questionDiv">
         <div class="question-flex">
                 <h2 class="question">{{question.content}}</h2>
                 
-                <svg width="25px" height="25px" viewBox="0 0 30 30" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                <svg class = "info" (click)="infoClicked($event)" width="25px" height="25px" viewBox="0 0 30 30" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                     <!-- Generator: Sketch 50.2 (55047) - http://www.bohemiancoding.com/sketch -->
                     <desc>Created with Sketch.</desc>
                     <defs>
@@ -47,6 +47,7 @@
                     </g>
                 </svg>
             </div>
+  <p class="info-text">{{question.hint}}</p>
   <div class="buttons">
     <button (click)="buttonClicked($event)" type="button" class="button" value="true">Yes</button>
     <button (click)="buttonClicked($event)" type="button" class="button" value="false">No</button>
