--- a/src/web-app/app/questions/question-types/multiple/multiple.component.css
+++ b/src/web-app/app/questions/question-types/multiple/multiple.component.css
@@ -12,8 +12,8 @@
 }
 
 .question {
-    font-size: 1.4rem;
-    line-height: 1.7rem;
+    font-size: 1.6rem;
+    line-height: 2.1rem;
     color: #1b1b1b;
     width: 90%;
     align-self: center;
@@ -21,12 +21,14 @@
 
 .buttons {
     display: flex;
+    flex-wrap: wrap;
+    margin: 2rem 0 2.5rem;
 }
 
 button {
-    padding: 0.5rem 1rem;
+    padding: 0.5rem 2rem;
     height: 4rem;
-    margin: 0 1rem 0.5rem 0;
+    margin: 1rem 1rem 0.5rem 0;
     background-image: linear-gradient(-45deg, rgba(243,243,243,0.99) 0%, #E8E8E8 100%);
     box-shadow: 0 6px 28px -17px rgba(111,109,109,0.50);
     border-radius: 5px;
@@ -41,3 +43,19 @@ button {
     color: white;
     box-shadow: 0 9px 22px -6px rgba(153, 208, 253, 0.5);
 }
+
+.info-text {
+    display: none;
+}
+
+
+.info-active {
+    display: block !important;
+    position: absolute;
+    background-color: white;
+    width: 90%;
+    left: 5%;
+    padding: 5rem 1rem;
+    box-shadow: 0 -3px 15px -4px rgba(165,195,253,0.40);
+    z-index: 90;
+}   
