--- a/src/web-app/app/questions/question-types/string/string.component.css
+++ b/src/web-app/app/questions/question-types/string/string.component.css
@@ -12,8 +12,8 @@
 }
 
 .question {
-    font-size: 1.4rem;
-  line-height: 1.7rem;
+    font-size: 1.6rem;
+    line-height: 2.1rem;
   color: #1b1b1b;
   width: 90%;
   align-self: center;
@@ -29,4 +29,20 @@
 ::ng-deep .mat-form-field-wrapper {
     width: 100%;
 }
+
+.info-text {
+    display: none;
+}
+
+
+.info-active {
+    display: block !important;
+    position: absolute;
+    background-color: white;
+    width: 90%;
+    left: 5%;
+    padding: 5rem 1rem;
+    box-shadow: 0 -3px 15px -4px rgba(165,195,253,0.40);
+    z-index: 90;
+}   
 
