--- a/src/web-app/app/questions/overview/overview.component.css
+++ b/src/web-app/app/questions/overview/overview.component.css
@@ -15,7 +15,6 @@
     font-size: 2rem;
     font-family: Helvetica;
     color: #1B1B1B;
-    margin: 2rem 0 0 0;
     padding-bottom: 1rem;
 }
 
@@ -60,8 +59,8 @@
     box-shadow: 0 -3px 15px -4px rgba(165,195,253,0.40);
 }
 
-.cancel, .done-button {
-    width: 47%;
+.done-button {
+    width: 100%;
     padding: 0.5rem 1rem;
     height: 5rem;
     margin: 0 1rem 0.5rem 0;
@@ -83,11 +82,6 @@
     background-color: darkgray;
 }
 
-
-.backbutton {
-    margin-top: 1rem;
-}
-
 .questionDiv {
     margin-bottom: 3rem;
 }
@@ -101,4 +95,8 @@
 
 .myStyle question {
     color: #ff00FF;
+}
+
+.backbutton {
+    height: 6rem;
 }
