--- a/src/web-app/app/questions/question-types/boolean/boolean.component.css
+++ b/src/web-app/app/questions/question-types/boolean/boolean.component.css
@@ -58,5 +58,9 @@ button {
     left: 5%;
     padding: 5rem 1rem;
     box-shadow: 0 -3px 15px -4px rgba(165,195,253,0.40);
-    z-index: 1000;
+    z-index: 90;
+    font-size: 1.5rem;
+    text-align: center;
+    line-height: 2.2rem;
+    color: #323232;
 }   
