--- a/src/web-app/app/questions/question-types/string/string.component.css
+++ b/src/web-app/app/questions/question-types/string/string.component.css
@@ -42,7 +42,11 @@
     width: 90%;
     left: 5%;
     padding: 5rem 1rem;
-    box-shadow: 0 -3px 15px -4px rgba(165,195,253,0.40);
+    box-shadow: 0 2px 29px -2px rgba(165,195,253,0.40);;
     z-index: 90;
+    font-size: 1.5rem;
+    text-align: center;
+    line-height: 2.2rem;
+    color: #323232;
 }   
 
