Redirect to ./categories instead of ./questions

--- a/src/web-app/app/stops/detail/stop-detail.component.html
+++ b/src/web-app/app/stops/detail/stop-detail.component.html
@@ -89,7 +89,7 @@
       <img class="button-icon" src="/assets/icons/history.svg" width="30" height="30" alt="" /> History
     </a>
     <div class="stripe"></div>
-    <a class="update-button" [routerLink]="['./', 'questions']">
+    <a class="update-button" [routerLink]="['./', 'categories']">
       <img class="button-icon" src="/assets/icons/update.svg" width="30" height="30" alt="" /> Update
     </a>
   </div>
