--- a/documentation/app/components/NumberComponent.html
+++ b/documentation/app/components/NumberComponent.html
@@ -1335,7 +1335,7 @@ export class NumberComponent implements OnInit {
   ngOnInit() {}
 
   sendAnswer() {
-    const value &#x3D; { question_id: this.question.id, answer: this.answer };
+    const value &#x3D; { question_num: this.question.num, answer: this.answer };
     this.outputAnswer.emit(value);
     this.questionService.addToLocalStorage(value);
   }
