--- a/documentation/app/components/BooleanComponent.html
+++ b/documentation/app/components/BooleanComponent.html
@@ -1463,7 +1463,7 @@ export class BooleanComponent implements OnInit {
   }
 
   sendAnswer() {
-    const value &#x3D; { question_id: this.question.id, answer: this.answer };
+    const value &#x3D; { question_num: this.question.num, answer: this.answer };
     this.outputAnswer.emit(value);
     this.questionService.addToLocalStorage(value);
   }
