--- a/src/web-app/app/shared/components/question-types/multiple/question-type-multiple.component.css
+++ b/src/web-app/app/shared/components/question-types/multiple/question-type-multiple.component.css
@@ -1,65 +1,128 @@
 .multiple-component {
-    width: 90%;
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 1.5rem;
+  width: 90%;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 4rem;
+  filter: blur(0.5px);
 }
 
 .question-flex {
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 1.5rem;
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 1.5rem;
 }
 
 .question {
-    font-size: 1.6rem;
-    line-height: 2.1rem;
-    color: #1b1b1b;
-    width: 90%;
-    align-self: center;
+  font-size: 1.8rem;
+  line-height: 2.3rem;
+  color: #1b1b1b;
+  width: 90%;
+  align-self: center;
+  opacity: 0.3;
 }
 
 .buttons {
-    display: flex;
-    flex-wrap: wrap;
-    margin: 2rem 0 2.5rem;
+  display: flex;
+  flex-wrap: wrap;
+  margin: 2rem 0 2.5rem;
 }
 
 button {
-    padding: 0.5rem 2rem;
-    height: 4rem;
-    margin: 1rem 1rem 0.5rem 0;
-    background-image: linear-gradient(-45deg, rgba(243,243,243,0.99) 0%, #E8E8E8 100%);
-    box-shadow: 0 6px 28px -17px rgba(111,109,109,0.50);
-    border-radius: 5px;
-    border: 2px hidden;
-    font-size: 16px;
-    color: rgba(29,31,49,0.45);
-    text-align: center;
+  padding: 0.5rem 2rem;
+  height: 4rem;
+  margin: 1rem 1rem 0.5rem 0;
+  background-image: linear-gradient(
+    -45deg,
+    rgba(243, 243, 243, 0.99) 0%,
+    #e8e8e8 100%
+  );
+  box-shadow: 0 6px 28px -17px rgba(111, 109, 109, 0.5);
+  border-radius: 5px;
+  border: 2px hidden;
+  font-size: 16px;
+  color: rgba(29, 31, 49, 0.45);
+  text-align: center;
 }
 
 .active {
-    background-image: linear-gradient(-270deg, #0072ff 0%, #00c6ff 99%);
-    color: white;
-    box-shadow: 0 9px 22px -6px rgba(153, 208, 253, 0.5);
+  background-image: linear-gradient(-270deg, #0072ff 0%, #00c6ff 99%);
+  color: white;
+  box-shadow: 0 9px 22px -6px rgba(153, 208, 253, 0.5);
 }
 
 .info-text {
-    display: none;
+  display: none;
 }
 
-
 .info-active {
-    display: block !important;
-    position: absolute;
-    background-color: white;
-    width: 90%;
-    left: 5%;
-    padding: 5rem 1rem;
-    box-shadow: 0 -3px 15px -4px rgba(165,195,253,0.40);
-    z-index: 90;
-    font-size: 1.5rem;
-    text-align: center;
-    line-height: 2.2rem;
-    color: #323232;
-}   
+  display: block !important;
+  position: absolute;
+  background-color: white;
+  width: 90%;
+  left: 5%;
+  padding: 5rem 1rem;
+  box-shadow: 0 -3px 15px -4px rgba(165, 195, 253, 0.4);
+  z-index: 90;
+  font-size: 1.5rem;
+  text-align: center;
+  line-height: 2.2rem;
+  color: #323232;
+  animation-name: info-animation;
+  animation-fill-mode: forwards;
+  animation-duration: 1s;
+}
+
+.buttons {
+  display: none;
+}
+
+.mystyle {
+  filter: none !important;
+  animation-name: animation3;
+  animation-fill-mode: forwards;
+  animation-duration: 1s;
+}
+
+.mystyle .question {
+  color: #1b1b1b !important;
+  line-height: 2.3rem;
+  animation-name: animation;
+  animation-fill-mode: forwards;
+  animation-duration: 1.5s;
+}
+
+.mystyle .buttons {
+  display: flex;
+  animation-name: animation2;
+  animation-fill-mode: forwards;
+  animation-duration: 1s;
+}
+
+@keyframes animation {
+  0% {
+    font-size: 1.8rem;
+    opacity: 0.3;
+  }
+  100% {
+    font-size: 1.8rem;
+    opacity: 1;
+  }
+}
+
+@keyframes animation2 {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes animation3 {
+  0% {
+    margin-bottom: 0;
+  }
+  100% {
+    margin-bottom: 4rem;
+  }
+}
