--- a/src/web-app/app/shared/components/question-types/number/question-type-number.component.css
+++ b/src/web-app/app/shared/components/question-types/number/question-type-number.component.css
@@ -2,28 +2,30 @@
   width: 90%;
   margin-left: auto;
   margin-right: auto;
-  margin-bottom: 1.5rem;
+  margin-bottom: 4rem;
+  filter: blur(0.5px);
 }
 
 .question-flex {
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 1.5rem;
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 1.5rem;
 }
 
 .question {
-    font-size: 1.6rem;
-    line-height: 2.1rem;
-    color: #1b1b1b;
-    width: 90%;
-    align-self: center;
+  font-size: 1.8rem;
+  line-height: 2.3rem;
+  color: #1b1b1b;
+  width: 90%;
+  align-self: center;
+  opacity: 0.3;
 }
 
 ::ng-deep .mat-form-field {
-    background-color: none;
-    border-style: none;
-    padding: 0;
-    box-shadow: none; 
+  background-color: none;
+  border-style: none;
+  padding: 0;
+  box-shadow: none;
 }
 
 ::ng-deep .mat-form-field-infix,
@@ -44,26 +46,83 @@
 .unit {
   align-self: center;
   font-size: 1.6rem;
-  color: rgba(29,31,49,0.45);
+  color: rgba(29, 31, 49, 0.45);
   margin-left: 1rem;
 }
 
 .info-text {
-    display: none;
+  display: none;
 }
 
-
 .info-active {
-    display: block !important;
-    position: absolute;
-    background-color: white;
-    width: 90%;
-    left: 5%;
-    padding: 5rem 1rem;
-    box-shadow: 0 -3px 15px -4px rgba(165,195,253,0.40);
-    z-index: 90;
-    font-size: 1.5rem;
-    text-align: center;
-    line-height: 2.2rem;
-    color: #323232;
-}   
+  display: block !important;
+  position: absolute;
+  background-color: white;
+  width: 90%;
+  left: 5%;
+  padding: 5rem 1rem;
+  box-shadow: 0 -3px 15px -4px rgba(165, 195, 253, 0.4);
+  z-index: 90;
+  font-size: 1.5rem;
+  text-align: center;
+  line-height: 2.2rem;
+  color: #323232;
+  animation-name: info-animation;
+  animation-fill-mode: forwards;
+  animation-duration: 1s;
+}
+
+.number {
+  display: none;
+}
+
+.mystyle {
+  filter: none !important;
+  animation-name: animation3;
+  animation-fill-mode: forwards;
+  animation-duration: 1s;
+}
+
+.mystyle .question {
+  color: #1b1b1b !important;
+  line-height: 2.3rem;
+  animation-name: animation;
+  animation-fill-mode: forwards;
+  animation-duration: 1.5s;
+}
+
+.mystyle .number {
+  display: flex;
+  animation-name: animation2;
+  animation-fill-mode: forwards;
+  animation-duration: 1s;
+}
+
+@keyframes animation {
+  0% {
+    font-size: 1.8rem;
+    opacity: 0.3;
+  }
+  100% {
+    font-size: 1.8rem;
+    opacity: 1;
+  }
+}
+
+@keyframes animation2 {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes animation3 {
+  0% {
+    margin-bottom: 0;
+  }
+  100% {
+    margin-bottom: 4rem;
+  }
+}
