Change typo on var name

--- a/src/web-app/app/categories/questions/questions-overview.component.html
+++ b/src/web-app/app/categories/questions/questions-overview.component.html
@@ -1,4 +1,4 @@
-<app-navbar stopName="Stop Name" [stopId]="stopId">
+<app-navbar stopName="Stop Name" [stopId]="stop_id">
   <div>
     <mat-progress-bar class="progress-bar" mode="determinate" value="{{progressValue}}"></mat-progress-bar>
     <p class="progress-tag">{{answeredQuestions}} of {{totalNumberOfQuestions}}</p>
