--- a/src/web-app/app/shared/components/question-types/number/question-type-number.component.css
+++ b/src/web-app/app/shared/components/question-types/number/question-type-number.component.css
@@ -2,8 +2,7 @@
   width: 90%;
   margin-left: auto;
   margin-right: auto;
-  margin-bottom: 4rem;
-  filter: blur(0.5px);
+  margin-bottom: 10rem;
 }
 
 .question-flex {
@@ -112,17 +111,19 @@
 @keyframes animation2 {
   0% {
     opacity: 0;
+    margin-top: 0; 
   }
   100% {
     opacity: 1;
+    margin-top: 7rem;
   }
 }
 
 @keyframes animation3 {
-  0% {
+  /* 0% {
     margin-bottom: 0;
   }
   100% {
-    margin-bottom: 4rem;
-  }
+    margin-bottom: 50rem !important;
+  }*/
 }
