nav on category page

--- a/src/web-app/app/categories/overview/categories-overview.component.html
+++ b/src/web-app/app/categories/overview/categories-overview.component.html
@@ -1,3 +1,4 @@
+<app-navbar> </app-navbar>
 <mat-accordion>
   <mat-expansion-panel *ngFor="let category of categories">
     <mat-expansion-panel-header *ngIf="categories_group[category.num]">
