--- a/src/web-app/app/shared/components/question-types/boolean/question-type-boolean.component.css
+++ b/src/web-app/app/shared/components/question-types/boolean/question-type-boolean.component.css
@@ -59,7 +59,7 @@ button {
   width: 90%;
   left: 5%;
   padding: 5rem 1rem;
-  box-shadow: 0 -3px 15px -4px rgba(165, 195, 253, 0.4);
+  box-shadow: 2px 14px 81px -24px rgba(165, 195, 253, 0.4);
   z-index: 90;
   font-size: 1.5rem;
   text-align: center;
