--- a/src/web-app/app/shared/components/question-types/multiple/question-type-multiple.component.css
+++ b/src/web-app/app/shared/components/question-types/multiple/question-type-multiple.component.css
@@ -35,7 +35,7 @@ button {
     rgba(243, 243, 243, 0.99) 0%,
     #e8e8e8 100%
   );
-  box-shadow: 0 6px 28px -17px rgba(111, 109, 109, 0.5);
+  box-shadow: 2px 14px 81px -24px rgba(165, 195, 253, 0.4);
   border-radius: 5px;
   border: 2px hidden;
   font-size: 16px;
