--- a/src/web-app/app/shared/components/question-types/string/question-type-string.component.css
+++ b/src/web-app/app/shared/components/question-types/string/question-type-string.component.css
@@ -43,7 +43,7 @@
     width: 90%;
     left: 5%;
     padding: 5rem 1rem;
-    box-shadow: 0 2px 29px -2px rgba(165,195,253,0.40);
+    box-shadow: 2px 14px 81px -24px rgba(165, 195, 253, 0.4);
     z-index: 90;
     font-size: 1.5rem;
     text-align: center;
