--- a/src/web-app/app/shared/components/question-types/boolean/question-type-boolean.component.css
+++ b/src/web-app/app/shared/components/question-types/boolean/question-type-boolean.component.css
@@ -2,7 +2,7 @@
   width: 90%;
   margin-left: auto;
   margin-right: auto;
-  margin-bottom: 10rem;
+  margin-bottom: 7rem;
 }
 
 .question-flex {
@@ -59,7 +59,7 @@ button {
   width: 90%;
   left: 5%;
   padding: 5rem 1rem;
-  box-shadow: 0 -3px 15px -4px rgba(165, 195, 253, 0.4);
+  box-shadow: 2px 14px 81px -24px rgba(165, 195, 253, 0.4);
   z-index: 90;
   font-size: 1.5rem;
   text-align: center;
@@ -70,9 +70,9 @@ button {
   animation-duration: 1s;
 }
 
-.buttons {
+/* .buttons {
   display: none;
-}
+} */
 
 .mystyle {
   filter: none !important;
