--- a/src/web-app/app/shared/components/question-types/multiple/question-type-multiple.component.html
+++ b/src/web-app/app/shared/components/question-types/multiple/question-type-multiple.component.html
@@ -1,6 +1,6 @@
 <div class="multiple-component questionDiv">
   <div class="question-flex">
-    <h2 class="question" (click)="openAnswer($event)">{{question.content}}</h2>
+    <h2 class="question">{{question.content}}</h2>
 
     <svg class="info" (click)="infoClicked($event)" width="25px" height="25px" viewBox="0 0 30 30" version="1.1" xmlns="http://www.w3.org/2000/svg"
       xmlns:xlink="http://www.w3.org/1999/xlink">
