--- a/src/web-app/app/shared/components/question-types/number/question-type-number.component.css
+++ b/src/web-app/app/shared/components/question-types/number/question-type-number.component.css
@@ -2,7 +2,7 @@
   width: 90%;
   margin-left: auto;
   margin-right: auto;
-  margin-bottom: 10rem;
+  margin-bottom: 7rem;
 }
 
 .question-flex {
@@ -18,6 +18,10 @@
   width: 90%;
   align-self: center;
   opacity: 0.3;
+}
+
+::ng-deep .mat-input-element {
+    font-size: 1.8rem !important;
 }
 
 ::ng-deep .mat-form-field {
@@ -60,7 +64,7 @@
   width: 90%;
   left: 5%;
   padding: 5rem 1rem;
-  box-shadow: 0 -3px 15px -4px rgba(165, 195, 253, 0.4);
+  box-shadow: 2px 14px 81px -24px rgba(165, 195, 253, 0.4);
   z-index: 90;
   font-size: 1.5rem;
   text-align: center;
@@ -71,9 +75,9 @@
   animation-duration: 1s;
 }
 
-.number {
+/* .number {
   display: none;
-}
+} */
 
 .mystyle {
   filter: none !important;
