Add ouput instead of input callback

--- a/src/web-app/app/shared/components/navbar/navbar.component.html
+++ b/src/web-app/app/shared/components/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <div class="header-full" [ngClass]="headerClass">
   <div class="heading-content" [ngClass]="headingClass">
     <div class="header-top">
-      <a class="backbutton" (click)="goBack()">
+      <a class="backbutton" (click)="onGoBack()">
         <svg class="back-svg" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:a="http://ns.adobe.com/AdobeSVGViewerExtensions/3.0/"
           x="0px" y="0px" width="14.3px" height="24px" viewBox="0 0 14.3 24" style="enable-background:new 0 0 14.3 24;" xml:space="preserve">
           <defs>
@@ -20,13 +20,14 @@
       </a>
 
       <ng-container *ngIf="isOnQuestionsPage">
-        <button class="done-button" [disabled]="doneBtnDisabled" (click)="done($event)">Done</button>
+        <button class="done-button" [disabled]="doneBtnDisabled" (click)="OnDone()">Done</button>
       </ng-container>
 
       <ng-container *ngIf="isOnStopDetailPage">
         <div class="stop-detail-photo">
-          <input type='file' name="file" id="file" class="input-file" accept="image/*" (change)="uploadCallback($event);" />
-          <label for="file">
+          <input type='file' name="input-upload-file" id="input-upload-file" class="input-file" accept="image/*" (change)="onUpload($event);"
+          />
+          <label for="input-upload-file">
             <figure>
               <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:a="http://ns.adobe.com/AdobeSVGViewerExtensions/3.0/"
                 x="0px" y="0px" width="28px" height="24.48px" viewBox="0 0 95.1 76.5" style="enable-background:new 0 0 95.1 76.5;"
