--- a/src/web-app/app/shared/components/navbar/navbar.component.scss
+++ b/src/web-app/app/shared/components/navbar/navbar.component.scss
@@ -5,28 +5,31 @@
 // }
 
 .header-top {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    height: 5rem;
-    font-size: 1.6rem;
-    text-decoration: none;
-    color: #039be5;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 5rem;
+  font-size: 1.6rem;
+  text-decoration: none;
+  color: #039be5;
 }
 
 .header {
-    height: auto;
-    padding-top: 0;
-    width: auto;
-    margin: 0;
-    
+  height: auto;
+  padding-top: 0;
+  width: auto;
+  margin: 0;
 }
 
 .done-button {
-    font-size: 1.6rem;
-    color: #039be5;
-    border-style: none;
-    background: none;
+  font-size: 1.6rem;
+  color: #039be5;
+  border-style: none;
+  background: none;
+
+  &:disabled {
+    color: #808080;
+  }
 }
 
 .heading {
@@ -54,4 +57,3 @@
   color: rgba(29, 31, 45, 0.45);
   margin: 0;
 }
-
