Add multi-language support
  - Correct addresByLang
  - Remove support for English
  - Remove unecessary files
  - Remove unused script
  - Merge branch 'develop' into todo/multi-languages
  - Style lang select
  - Add dutch translate file
  - Connect translator to stop-details page
  - Set size of lang selector
  - Set default language to fr
  - Move provider to shared.module
  - Add dynamic switch of lang
  - Add lang switch select
  - Update translate service && pipe
  - Implements translate pipe
  - Update i18n files
  - Correct trad keys
  - Simple  service
  - Install complementary package
  - Add i18n files for the translations

-

--- a/src/web-app/app/categories/questions/questions-overview.component.html
+++ b/src/web-app/app/categories/questions/questions-overview.component.html
@@ -1,7 +1,8 @@
-<app-navbar title="Stop Name" [subTitle]="stop_id" (back)="cancel()" [doneBtnDisabled]="isDoneBtnDisabled" (done)="saveAnswers()">
+<app-navbar [title]="categoryParentName" [subTitle]="categoryName" (back)="cancel()" [doneBtnDisabled]="isDoneBtnDisabled"
+  (done)="saveAnswers()">
   <div>
     <mat-progress-bar class="progress-bar" mode="determinate" value="{{progressValue}}"></mat-progress-bar>
-    <p class="progress-tag">{{answeredQuestions}} of {{totalNumberOfQuestions}}</p>
+    <p class="progress-tag">{{answeredQuestions}} {{'questions.overview.progress.of' | translate}} {{totalNumberOfQuestions}}</p>
   </div>
 </app-navbar>
 
