--- a/src/web-app/app/histories/list/history-list.component.html
+++ b/src/web-app/app/histories/list/history-list.component.html
@@ -8,7 +8,7 @@
     <mat-list *ngFor="let history of histories">
       <mat-list-item>
         <a class="history" [routerLink]="['./', history.id]">
-          <img [ngStyle]="{'vertical-align': 'middle'}" src="/assets/icons/history.svg" width="30" height="30" alt="" /> Update of {{history.created_at | date }}
+          <img [ngStyle]="{'vertical-align': 'middle'}" src="/assets/icons/history.svg" width="30" height="30" alt="" /> {{'histories.list.item' | translate}} {{history.created_at | date }}
         </a>
       </mat-list-item>
       <mat-divider></mat-divider>
