Fix go back action

--- a/src/web-app/app/categories/overview/categories-overview.component.html
+++ b/src/web-app/app/categories/overview/categories-overview.component.html
@@ -1,4 +1,4 @@
-<app-navbar> </app-navbar>
+<app-navbar autoGoBack="true"> </app-navbar>
 <mat-accordion>
   <mat-expansion-panel *ngFor="let category of categories">
     <mat-expansion-panel-header *ngIf="categories_group[category.num]">
