--- a/src/web-app/app/shared/components/navbar/navbar.component.html
+++ b/src/web-app/app/shared/components/navbar/navbar.component.html
@@ -27,7 +27,7 @@
 
 
       <ng-container *ngIf="isOnQuestionsPage">
-        <button class="done-button" [disabled]="doneBtnDisabled" (click)="OnDone()">{{'navbar.button.done' | translate}}</button>
+        <button class="done-button" [disabled]="doneBtnDisabled" (click)="onDone()">{{'navbar.button.done' | translate}}</button>
       </ng-container>
 
       <ng-container *ngIf="isOnStopDetailPage">
