Remove duplicate data

--- a/src/web-app/app/stops/detail/stop-detail.component.html
+++ b/src/web-app/app/stops/detail/stop-detail.component.html
@@ -17,7 +17,7 @@
         </div>
         <div>
           <p class="line-direction">&rarr; {{line.directionByLang(translate.activeLang)}}</p>
-          <p class="search-result-info-title">{{stop.alphaByLang(translate.activeLang)}}</p>
+          <!-- <p class="search-result-info-title">{{stop.alphaByLang(translate.activeLang)}}</p> -->
         </div>
       </article>
     </section>
