Use && coneect recentHistory

--- a/src/web-app/app/stops/detail/stop-detail.component.html
+++ b/src/web-app/app/stops/detail/stop-detail.component.html
@@ -3,7 +3,7 @@
   </app-navbar>
 
   <div class="carousel">
-    <carousel *ngIf="enabledCaroussel" [sources]="imageSources" [config]="config"></carousel>
+    <carousel *ngIf="enabledCaroussel" [sources]="imageSources" [config]="carousselConfig"></carousel>
   </div>
   <div class="detail-info">
     <section class="section">
