--- a/src/web-app/app/shared/components/navbar/navbar.component.html
+++ b/src/web-app/app/shared/components/navbar/navbar.component.html
@@ -68,6 +68,11 @@
     <ng-container *ngIf="isOnStopDetailPage || isOnLocationPage">
       <h1 class="section-title">{{stopName}}</h1>
       <h2 class="section-sub-title">ID : {{stopId}}</h2>
+      <h2 *ngIf="lastHistory" (click)="gotToLastHistory()">
+        <a>
+          <img class="button-icon" src="/assets/icons/history.svg" width="30" height="30" alt="" /> {{lastHistory.created_at}}
+        </a>
+      </h2>
     </ng-container>
 
     <ng-container *ngIf="isOnHistoriesPage && !historyDate">
