Fix duplicate lines in search

--- a/src/web-app/app/stops/search/stop-search.component.html
+++ b/src/web-app/app/stops/search/stop-search.component.html
@@ -21,7 +21,7 @@
               <div class="search-result-info-direction">
                 <ul class="search-result-info-lines">
                   <!-- <span class="search-result-info-type">{{stop.type}}</span> -->
-                  <li class="search-result-info-line" *ngFor="let line of stop.transport" [ngStyle]="{'background-color':line.backColor}">
+                  <li class="search-result-info-line" *ngFor="let line of stop.uniqLines" [ngStyle]="{'background-color':line.backColor}">
                     <span [ngStyle]="{'color':line.textColor}">{{line.number}}</span>
                   </li>
                 </ul>
